--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,4 +25,8 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+
+    implementation 'org.ftclib.ftclib:core:2.1.1'
 }
